# Lexico

./: .gitignore  CMakeLists.txt  NOTICE  README.md
docs/: Language.md  lexico-lang.md
gui/: CMakeLists.txt  GUI.py  MainWindow.py  imgui.cmake  main.cpp
gui/ui/: MainWindow.py  MainWindow.ui
lang/: CMakeLists.txt  IOStruct.py  Run.py  __init__.py  ast.cpp  ast.h  builtin_symbols.cpp  builtin_symbols.h  constants.h  cow_ptr.h  errors.cpp  errors.h  executor.cpp  executor.h  find.cpp  find.h  ftable.cpp  ftable.h  highlights.cpp  lang.cpp  lang.h  lang.hpp  lexer.cpp  lexer.h  match.cpp  match.h  namespace.h  operations.cpp  operations.h  page.cpp  page.h  parser.cpp  parser.h  pattern.h  public.h  resolution.cpp  resolution.h  runtime.cpp  runtime.h  semantics.cpp  (+9 more)
lang/core/: Error.py  InstructionNode.py  Lexer.py  Parser.py  SemanticAnalyser.py  Structures.py  __init__.py
lang/core/common/: SpecialTokens.py  __init__.py
lang/core/lexer/: Lexer.py  Structures.py  __init__.py
lang/core/parser/: InstructionNode.py  Parser.py  __init__.py
lang/core/semantics/: SemanticAnalyser.py  __init__.py
lang/private/: CMakeLists.txt  ast.cpp  ast.h  constants.h  errors.h  executor.cpp  executor.h  find.cpp  find.h  highlights.cpp  lexer.cpp  lexico.cpp  operations.cpp  operations.h  page.cpp  page.h  parser.cpp  parser.h  resolution.cpp  runtime.cpp  runtime.h  symbols.h  token.cpp  token.h  util.cpp  util.h
lang/private/types/: CMakeLists.txt  datapoint.cpp  datapoint.h  datatype.cpp  declarations.h  evalcontext.cpp  evalcontext.h  heap.cpp  member.cpp  processing.cpp  variable.cpp  variable.h
lang/private/types/primitives/: CMakeLists.txt  bool.cpp  bool.h  cap.cpp  cap.h  capid.h  float.cpp  float.h  include.h  int.cpp  list.cpp  match.cpp  match.h  matches.cpp  matches.h  pattern.cpp  pattern.h  srange.h  string.cpp  string.h  string_view.cpp  string_view.h  void.h
lang/public/: CMakeLists.txt  lexico.h
lang/public/api/: highlights.h
lang/types/: CMakeLists.txt  accessor.cpp  accessor.h  basic.cpp  basic.h  box.h  datapath.cpp  datapath.h  datapoint.cpp  datapoint.h  datatype.cpp  datatype.h  declarations.cpp  declarations.h  evalcontext.cpp  evalcontext.h  heap.cpp  heap.h  iterator.cpp  iterator.h  member.h  pattern.cpp  pattern.h  processing.cpp  processing.h  symbolizer.cpp  symbolizer.h  unresolved.cpp  unresolved.h  variable.cpp  variable.h
lang/types/primitives/: CMakeLists.txt  bool.cpp  bool.h  cap.cpp  cap.h  capid.cpp  capid.h  float.cpp  float.h  include.h  int.cpp  int.h  irange.cpp  irange.h  list.cpp  list.h  match.cpp  match.h  matches.cpp  matches.h  pattern.cpp  pattern.h  srange.cpp  srange.h  string.cpp  string.h  string_view.cpp  string_view.h  void.cpp  void.h
